update ipa file

--- a/manifest.plist
+++ b/manifest.plist
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN"
-  "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+ "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
   <key>items</key>
@@ -12,19 +12,19 @@
           <key>kind</key>
           <string>software-package</string>
           <key>url</key>
-          <string>https://smphuc.github.io/ios-app-install/myapp.ipa</string>
+          <string>https://smphuc.github.io/ios-app-install/tft-signed.ipa</string>
         </dict>
       </array>
       <key>metadata</key>
       <dict>
         <key>bundle-identifier</key>
-        <string>com.smphuc.myapp</string> <!-- thay bằng bundle thực tế -->
+        <string>com.ten.ungdung</string>
         <key>bundle-version</key>
-        <string>1.0</string>
+        <string>1.0.0</string>
         <key>kind</key>
         <string>software</string>
         <key>title</key>
-        <string>MyApp</string>
+        <string>Tên Ứng Dụng</string>
       </dict>
     </dict>
   </array>
