--- a/manifest.plist
+++ b/manifest.plist
@@ -12,19 +12,19 @@
           <key>kind</key>
           <string>software-package</string>
           <key>url</key>
-          <string>https://smphuc.github.io/ios-app-install/tft-signed.ipa</string>
+          <string>https://github.com/SMPhuc/ios-app-install/blob/main/tft-signed.ipa</string>
         </dict>
       </array>
       <key>metadata</key>
       <dict>
         <key>bundle-identifier</key>
-        <string>com.ten.ungdung</string>
+        <string>SMPhuc.github.io</string>
         <key>bundle-version</key>
         <string>1.0.0</string>
         <key>kind</key>
         <string>software</string>
         <key>title</key>
-        <string>Tên Ứng Dụng</string>
+        <string>TFT mùa 15</string>
       </dict>
     </dict>
   </array>
