--- a/manifest.plist
+++ b/manifest.plist
@@ -12,7 +12,7 @@
           <key>kind</key>
           <string>software-package</string>
           <key>url</key>
-          <string>https://github.com/SMPhuc/ios-app-install/blob/main/tft-signed.ipa</string>
+          <string>https://smphuc.github.io/ios-app-install/tft-signed.ipa</string>
         </dict>
       </array>
       <key>metadata</key>
